# ppmImage

./: .gitignore  CMakeLists.txt  README.md  ppmImage.sln
ppmImage/: drand48.h  material.h  ppmImage.cpp  ppmImage.vcxproj  ppmImage.vcxproj.filters  ray.h  sphere.h  vec3.h
src/: camera.h  hitable.h  hitableList.h  job.cpp  job.h  scene.cpp  scene.h  texture.h
src/interface/: wxraytracer.cpp  wxraytracer.h  wxraytracerFrame.cpp  wxraytracerFrame.h
src/raytrace/: camera.h  drand48.h  hitable.h  hitableList.h  material.h  ray.h  sphere.h  texture.h  vec3.h
